# wordtrack

./: .dockerignore  .gitignore  .pylintrc  Dockerfile  README.md  Taskfile.yaml  backup.sh  docker-compose.yaml  entrypoint.sh  gunicorn_config.py  manage.py  pyproject.toml
app/: admin.py  apps.py  models.py  urls.py  views.py
app/management/commands/: today.py
app/migrations/: 0001_initial.py  0002_alter_word_group.py  0003_alter_word_unique_together.py  0004_learninghistory.py  0005_todaypage.py
app/service/: commands.py  difficulty_multipliers.py  learned_counter_repository.py  learning_history.py  openai_client.py  speech.py  word.py  word_example.py
app/service/today_page/: __init__.py  hard_words.py  page.py  schema.py  storage.py  text_generator.py
app/templates/: add_word.html  index.html  today.html
app/tests/: conftest.py  test_base.py
data/: .env.example
wordtrack/: asgi.py  settings.py  urls.py  wsgi.py
